--- a/assets/css/datetime-form.css
+++ b/assets/css/datetime-form.css
@@ -12,6 +12,107 @@
 /*    pointer-events: none;*/
 /*}*/
 
+.hidden {
+    display: none !important;    
+}
+
+input[type="number"]::-webkit-inner-spin-button, 
+input[type="number"]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    margin: 0; 
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+    -webkit-appearance: none;
+}
+
+
+
+.modal-open {
+    overflow: hidden;
+}
+
+.fa {
+    font-family: 'Font Awesome\ 6 Free';
+    content: "\f061";
+    font-weight: 900;
+    font-style: inherit;
+}
+
+.success-modal {
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    min-width: 250px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.success-modal.show {
+    display: flex;
+    opacity: 1; 
+}
+
+.success-modal-content {
+    position: relative;
+    margin: auto;
+    background-color: white;
+    padding: 30px;
+    text-align: center;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+    border-radius: 8px;
+    max-width: 500px;
+    width: 40%;
+}
+
+.success-icon {
+    margin-bottom: 20px;
+}
+
+.success-icon svg {
+    width: 50px;
+    height: 50px;
+    color: green;
+}
+
+.success-modal-content h2 {
+    color: #4CAF50;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.success-modal-content p {
+    color: #000;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+.close-success-modal {
+    position: absolute;
+    background: rgb(236, 13, 13, 0.6);
+    top: 0;
+    right: 0;
+    border: none;
+    color: #000;
+    border-radius: 0 8px 0 0;
+}
+
+.close-success-modal:hover {
+    background: rgb(236, 13, 13, 0.28);
+}
+
+.error-message {
+    color: red;
+    text-align: center;
+}
+
 select {
     -webkit-appearance: none !important;
     -moz-appearance: none !important;
@@ -301,6 +402,33 @@ select {
     position: relative;
 }
 
+#payment-form .payment-form-content {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    width: 100%;
+    text-align: justify;
+}
+
+.choose-payment {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    min-height: 450px;
+}
+
+#payment-options {
+    min-width: 400px;
+    max-width: 500px;
+    min-height: 430px;
+    padding: 0 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
 .agreement-container {
     width: 100%;
     display: flex;
@@ -396,6 +524,266 @@ select {
     transition: background-color 0.3s ease;
 }
 
+.payment-logo {
+    height: 26px;
+    width: 26px;
+}
+    
+.payment-toggle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin: 10px 0;
+}
+
+.toggle-switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 30px;
+}
+
+.toggle-switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: 0.4s;
+    border-radius: 30px;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 24px;
+    width: 24px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    transition: 0.4s;
+    border-radius: 50%;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+input:checked + .slider {
+    background-color: #6B8E23;
+}
+
+input:checked + .slider:before {
+    transform: translateX(30px);
+}
+
+.toggle-labels {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    gap: 10px;
+    align-items: center;
+}
+
+.toggle-label {
+    font-size: 0.9em;
+    color: #333;
+    font-weight: bold;
+    transition: color 0.3s;
+    padding: 0 0.2em
+}
+
+.toggle-label.active {
+    color: #6B8E23;
+    font-size: 1em;
+}
+
+.price-display {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+    font-size: 13px;
+    color: #666;
+}
+
+.price-display span {
+    font-weight: bold;
+}
+
+#full-price,
+#advance-price {
+    font-weight: bold;
+    padding: 0 0.3em;
+    width: 100%;
+}
+
+#advance-price {
+    text-align: right;
+}
+
+#full-price.active {
+    color: #6B8E23;
+    border-bottom: 1px solid #6B8E23;
+    border-right: 1px solid #6B8E23;    
+    border-bottom-right-radius: 10px;
+}
+
+#advance-price.active {
+    color: #6B8E23;
+    border-bottom: 1px solid #6B8E23;
+    border-left: 1px solid #6B8E23;
+    border-bottom-left-radius: 10px;
+}
+
+.payment-btn {
+    height: 60px;
+}
+
+.payment-btn {
+    display: block;
+    width: 100%;
+    padding: 12px;
+    margin: 5px 0;
+    font-size: 16px;
+    border: 1px solid #c9c8c8;
+    background-color: white !important;
+    color: #333;
+    cursor: pointer;
+    text-align: center;
+    transition: all 0.3s ease;
+    border-radius: 5px;
+    position: relative;
+}
+
+.payment-btn:hover {
+    background-color: #f4f4f4 !important;
+    color: #6b8e23;
+    border: 1px solid #6B8E23;
+}
+
+.payment-btn.active {
+    outline: 2px solid #6B8E23;
+    color: #333;
+    background-color: #fff;
+}
+
+.payment-btn.active::after {
+    content: '';
+    width: 12px;
+    height: 12px;
+    background-color: #28a745;
+    outline: 2px solid #80c080;
+    border-radius: 50%;
+    position: absolute;
+    right: 1em;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.payment-btn span {
+    display: inline-block;
+    width: 70%;
+    text-transform: none;
+    font-size: 0.9em;
+}
+
+#payment-methods {
+    align-content: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 40%;
+    gap: 0 1em;
+}
+
+.payment-method {
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 5px;
+}
+
+.payment-method.hidden {
+    display: none;
+}
+
+.payment-method.active {
+    display: block;
+}
+
+.hidden-radio {
+    display: none;
+}
+
+#submit-pay-on-arrival,
+#submit-bank-transfer,
+#submit-stripe-payment {
+    height: 44px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    border: none;
+    background: #000;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    margin: auto;
+    transition: all .9s;
+}
+
+#submit-pay-on-arrival:hover,
+#submit-bank-transfer:hover,
+#submit-stripe-payment:hover {
+    background-color: #6B8E23;
+    transform: scale(0.95);
+}
+
+#submit-pay-on-arrival,
+#submit-bank-transfer,
+#stripe-payment-form,
+#paypal-payment-form {
+    padding: 1rem 0;
+}
+
+#stripe-payment-form strong, #paypal-payment-form strong {
+    padding: 0 1rem;
+}
+
+#card-element {
+    padding: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    width: 100%;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    background: var(--ast-comment-inputs-background); 
+}
+
+#paypal-button-container iframe {
+    border-radius: 10px !important;
+    transition: all 0.9s !important;
+}
+
+#paypal-button-container iframe:hover {
+    transform: scale(0.95);
+}
+
+
+/********* Stripe  ************/
+#card-element {
+    padding: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    width: 100%;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+    background: var(--ast-comment-inputs-background);
+}
 
 .card-for-test {
     padding: 1rem;
@@ -413,15 +801,51 @@ select {
 }
 
 
-
 /****************************  Devices (below 1100px) ******************************************/
 @media screen and (max-width: 1100px) {
+    #payment-methods {
+        width: 80%;
+        grid-template-columns: 1fr 1fr;
+    }
     
+    #payment-options {
+        padding: 3rem 1rem;
+    }
 }
 
 /****************************  Devices (below 768px) ******************************************/
 @media screen and (max-width: 768px) {
+    #summary {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
     
+    #payment-form {
+        flex-direction: unset;
+        max-width: 600px;
+        margin: 0 auto;
+    }
+    
+    #booking-summary, #booking-cost-summary {
+        max-width: 450px;
+    }
+    
+    #payment-methods {
+        grid-template-columns: 1fr;
+    }
+    
+    #payment-options {
+        margin-top: 2rem;
+    }
+    
+    #booking-summary {
+        padding: 1rem;
+    }
+    
+    .success-modal-content {
+        width: 80%;
+    }
 }
 
 /****************************  Mobile devices (below 650px) ******************************************/
@@ -431,6 +855,40 @@ select {
     }
 
     
+    
+}
+
+@media screen and (max-width: 480px) {
+    #rm-booking-form {
+        padding: 0;
+    }
+
+    #rm-booking-form > div:first-child {
+        padding: 0;
+    }
+    
+    .choose-payment {
+        min-height: unset;
+        padding-top: 2rem;
+    }
+    
+    .payment-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    #payment-options {
+        min-width: 300px;
+    }
+    
+    #payment-methods {
+        width: 100%;
+    }
+    
+    #booking-summary {
+        padding: 1rem 0;
+    }
     
 }
 
@@ -484,6 +942,10 @@ select {
         background: #ffffff36;
     }
     
+    #desktop-header-menu {
+        display: flex;
+    }
+    
 }
 
 @media screen and (min-width: 1101px) {
@@ -528,5 +990,7 @@ select {
 }
 
 @media screen and (min-width: 1400px) {
-    
+    .choose-payment {
+        flex-direction: column;
+    }
 }
