--- a/assets/css/daterange-form.css
+++ b/assets/css/daterange-form.css
@@ -402,7 +402,7 @@ input[type="number"] {
 }
 
 .hidden {
-    display: none;    
+    display: none !important;    
 }
 
 body.modal-open {
@@ -475,6 +475,7 @@ i.fa {
     top: 0;
     right: 0;
     border: none;
+    border-top-right-radius: 8px;
     color: #000;
 }
 
@@ -526,20 +527,20 @@ i.fa {
     min-height: 450px;
 }
     
-#payment-options, #booking-summary {
-    width: 100%;
-    max-width: 450px;
-}
-
-/*#payment-options {*/
-/*    min-width: 400px;*/
-/*    max-width: 500px;*/
-/*    min-height: 430px;*/
-/*    padding: 0 1rem;*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    justify-content: space-evenly;*/
+/*#payment-options, #booking-summary {*/
+/*    width: 100%;*/
+/*    max-width: 450px;*/
 /*}*/
+
+#payment-options {
+    min-width: 400px;
+    max-width: 500px;
+    min-height: 430px;
+    padding: 0 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
 
 #summary {
     padding: 3rem 0;
@@ -877,7 +878,7 @@ input:checked + .slider:before {
     border-radius: 10px;
     background: #ea6c6c;
     position: absolute;
-    bottom: 0;
+    bottom: -45px;
     right: auto;
     display: flex;
 }
@@ -1102,8 +1103,14 @@ input:checked + .slider:before {
     
 }
 
-@media screen and (min-width: 1400px) {
+@media screen and (min-width: 1366px) {
     .choose-payment {
         flex-direction: column;
+    }
+    
+    #payment-methods {
+        width: 100%;
+        max-width: 650px;
+        grid-template-columns: 1fr 1fr;
     }
 }
